--- a/style/sass/base/_fonts.scss
+++ b/style/sass/base/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Dubai';
-  src: url('../../../fonts/') format('woff2'),
-      url('../../../fonts/Dubai-Bold.woff') format('woff'),
-      url('../../../fonts/Dubai-Bold.ttf') format('truetype');
+  src: url('../fonts/') format('woff2'),
+      url('../fonts/Dubai-Bold.woff') format('woff'),
+      url('../fonts/Dubai-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -10,9 +10,9 @@
 
 @font-face {
   font-family: 'Dubai';
-  src: url('../../../fonts/Dubai-Regular.woff2') format('woff2'),
-      url('../../../fonts/Dubai-Regular.woff') format('woff'),
-      url('../../../fonts/Dubai-Regular.ttf') format('truetype');
+  src: url('../fonts/Dubai-Regular.woff2') format('woff2'),
+      url('../fonts/Dubai-Regular.woff') format('woff'),
+      url('../fonts/Dubai-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -20,9 +20,9 @@
 
 @font-face {
   font-family: 'Dubai';
-  src: url('../../../fonts/Dubai-Medium.woff2') format('woff2'),
-      url('../../../fonts/Dubai-Medium.woff') format('woff'),
-      url('../../../fonts/Dubai-Medium.ttf') format('truetype');
+  src: url('../fonts/Dubai-Medium.woff2') format('woff2'),
+      url('../fonts/Dubai-Medium.woff') format('woff'),
+      url('../fonts/Dubai-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
