--- a/style/sass/base/_base.scss
+++ b/style/sass/base/_base.scss
@@ -28,7 +28,7 @@ html[dir = "ltr"] {
 
 .title-text {
   font-size: 30px;
-  color: #000000;
+  color: $main-color;
   font-weight: 700;
   text-align: center;
   text-transform: capitalize;
@@ -58,7 +58,7 @@ img {
   position: absolute;
   width: 40px;
   height: 40px;
-  background-color: rgba($color: #000000, $alpha: .2);
+  background-color: rgba($color: $main-color, $alpha: .2);
   border-radius: 50%;
   transition: all linear .2s;
   &:hover{
@@ -227,7 +227,7 @@ background-color: #ffffff;
 @include min-768 {
   .toTop{
     &:hover{
-      background-color: #000;
+      background-color: $main-color;
       i{
         color: #fff;
       }
