--- a/style/sass/components/_category.scss
+++ b/style/sass/components/_category.scss
@@ -61,13 +61,13 @@
     margin: 20px auto;
     font-size: 20px;
     line-height: 30px;
-    color: #000000;
+    color: $main-color;
     text-align: center;
     font-weight: 500;
 }
 .cat-desc-title{
     font-size: 36px;
-    color: #000000;
+    color: $main-color;
     font-weight: 700;
     text-align: center;
 }
