--- a/style/sass/components/_features.scss
+++ b/style/sass/components/_features.scss
@@ -37,7 +37,7 @@
     border-radius: 27px;
     background-color: #fff;
         .icon{
-            color: #000;
+            color: $main-color;
             font-size: 36px;
         } 
 }
