--- a/style/main.css
+++ b/style/main.css
@@ -114,6 +114,20 @@ img {
   text-decoration: none;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #b3b3b3;
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #000;
+}
+
 .preloader {
   pointer-events: none;
   -webkit-user-select: none;
