--- a/style/main.css
+++ b/style/main.css
@@ -1063,9 +1063,6 @@ nav {
 }
 
 @media only screen and (max-width: 767px) {
-  .price .current-price, .price .deleted {
-    font-size: 15px;
-  }
   .price .current-price {
     -webkit-margin-end: 0;
             margin-inline-end: 0;
@@ -1088,21 +1085,21 @@ nav {
   .price {
     flex-direction: column;
     line-height: normal;
-    margin-bottom: 10px;
-    min-height: 50px;
+    height: 55px;
     justify-content: space-between;
+    margin: 0;
+    margin-bottom: 10px;
   }
   .like {
     width: 30px;
     height: 30px;
   }
   .item-desc .brand-name {
-    font-size: 14px;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
   .newArrivals {
     padding: 20px 20px 75px 20px;
