--- a/style/main.css
+++ b/style/main.css
@@ -1292,6 +1292,7 @@ footer a:hover {
   text-decoration: none;
 }
 footer .footer-title {
+  margin: 0;
   font-size: 18px;
   color: #000;
   color: #000;
@@ -1340,7 +1341,7 @@ html[dir=ltr] .message input {
 
 .quick-links ul li {
   font-size: 16px;
-  line-height: 35px;
+  line-height: 30px;
 }
 .quick-links ul li a {
   color: #808080;
