--- a/style/sass/components/_footer.scss
+++ b/style/sass/components/_footer.scss
@@ -5,6 +5,7 @@ footer{
         text-decoration: none;
     }
     .footer-title{
+        margin: 0;
         font-size: 18px;
         color: $main-color;
         color: $main-color;
@@ -58,7 +59,7 @@ html[dir = "ltr"]{
 .quick-links {
 ul li {
     font-size: 16px;
-    line-height: 35px;
+    line-height: 30px;
    a{
     color: #808080;
     text-transform: capitalize;
