--- a/style/sass/base/_base.scss
+++ b/style/sass/base/_base.scss
@@ -154,6 +154,7 @@ img {
 height: 40px;
 filter: drop-shadow(0 0 12px rgba(0,0,0,0.15));
 background-color: #ffffff;
+cursor : pointer;
   position: fixed;
   width: 40px;
   height: 40px;
