--- a/style/sass/components/_header.scss
+++ b/style/sass/components/_header.scss
@@ -280,20 +280,6 @@ html[dir="ltr"]{
     opacity: 1;
 }
 
-.service-order-btn {
-    font-size: 16px;
-    color: #ffffff;
-    font-weight: 600;
-    text-align: center;
-    padding: 8px 21px;
-    border-radius: 20px;
-    // background-color: $yellow-color;
-    transition: all linear .2s;
-    &:hover{
-        background-color: $main-color;
-        color: #fff;
-    }
-}
 
 
 
@@ -407,27 +393,29 @@ nav{
 
 @include max-992 {
 
-
+    .control-section .lang{
+        display : none ;
+    }
     .service-order{
         width: 100%;
         justify-content: center;
     }
-    .service-order-btn{
-        padding:  7px 40px;
+
+    .cart, .menu-bars, .account-text {
+        margin-inline-start: 20px;
     }
+  
     .top-header{
         display: none;
     }
     .logo {
         img {
-            width: 80px;
+            width: 65px;
             max-width: 100%;
         }
     }
-    .favourite{
-        display: none;
-    }
-    .cart, .favourite, .account-text, .openMySearch{
+   
+    .cart, .favourite, .account-text{
         margin-inline-start : 20px;
     }
   .search-holder{
@@ -439,16 +427,68 @@ nav{
   .lang{
     margin-inline-start : 20px;
   }
+  nav{
+    overflow-y: auto;
+    position: fixed ;
+    top: 0 ;
+    inset-inline-start: 0%;
+    width: 100%;
+    height: 100%;
+    padding:41px 30px 0 30px;
+    background-color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    clip-path: circle(10.9% at 16% 16%);
+    transition: 0.4s;
+    z-index: 200;
+    text-align: center;
+    .lang{
+        margin-inline-start: 0;
+        text-align: start;
+        & > a {
+            display: inline-flex;
+        }
+    }
+   
+    .nav-ul > li{
+        margin-bottom: 15px;
+        margin-inline-end: 0;
+        a{
+              display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 18px;
+            &:hover{
+                color: $main-color;
+            }
+            &::after{
+                height: auto;
+            }
+        }
+    }
+}
+
+.nav-ul{
+    flex-direction: column;
+    margin: 55px 0 0 0 !important;
+    align-items: center;
+}
 }
 
 @include max-768 {
+
+
+    .nav-ul{
+        margin: 45px 0 0 0 !important;
+    }
+    .favourite{
+        display: none;
+    }
     
     .lang .english{
         line-height: 16px;
     }
-    .cart, .menu-bars, .account-text {
-        margin-inline-start: 20px;
-    }
+   
    
     .header-dropdown{
         width: 115px;
@@ -457,9 +497,7 @@ nav{
     .header-dropdown a{
         font-size: 13px;
     }
-    .control-section .lang{
-        display: none;
-    }
+   
     .account-details{
         inset-inline-start: -44px;
     }
@@ -473,26 +511,21 @@ nav{
             margin-inline-end: 10px;
         }
     }
-    .service-order{
-        display: none;
-    }
+   
     .search-holder .search-holder-input{
         width: 100%;
     }
     html[dir=ltr] .nav-ul > li a{
         font-size: 17px;
     }
-    .li-drop::after{
-        font-size: 16px;
-    }
  
-    .li-drop .ul-drop li{
-        padding-bottom: 0;
-    }
     .openSearch-btn{
         display: flex !important;
         justify-content: center;
         align-items: center;
+    }
+    nav{
+        padding: 25px 20px 0 20px;
     }
     
     header{
@@ -504,16 +537,6 @@ nav{
  }
     .icon-rotate::after{
         transform:  rotate(180deg)  !important;
-        // top: 13px ;
-    }
-
-    html[dir="rtl"]{
-        .li-drop .ul-drop a{
-            text-align: right;
-        }
-    }
-    .li-drop .ul-drop::after{
-        display: none;
     }
    
     .logo img{
@@ -532,51 +555,9 @@ nav{
     .banner-overlay{
         display: none;
     }
-    nav{
-        overflow-y: auto;
-        position: fixed ;
-        top: 0 ;
-        inset-inline-start: 0%;
-        width: 100%;
-        height: 100%;
-        padding:25px 19px 0 19px;
-        background-color: #fff;
-        opacity: 0;
-        visibility: hidden;
-        clip-path: circle(10.9% at 16% 16%);
-        transition: 0.4s;
-        z-index: 200;
-        text-align: center;
-        .lang{
-            margin-inline-start: 0;
-            text-align: start;
-            & > a {
-                display: inline-flex;
-            }
-        }
-       
-    }
-    .nav-ul{
-        flex-direction: column;
-        margin: 45px 0 0 0 !important;
-        align-items: center;
-    }
-    .nav-ul > li{
-        margin-bottom: 15px;
-        margin-inline-end: 0;
-        a{
-              display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-size: 18px;
-            &:hover{
-                color: $main-color;
-            }
-            &::after{
-                height: auto;
-            }
-        }
-    }
+  
+ 
+   
     .closeNav-btn{
       display: block;
         i{
@@ -604,6 +585,20 @@ nav{
 
 
 
+@include min-992 {
+    .menu-bars , nav .lang{
+        display: none;
+    }
+    .account-text{
+        &:hover{
+            .account-details{
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+      }
+}
+
 
 
 
@@ -616,17 +611,6 @@ nav{
             }
         }
     }
-    .menu-bars , nav .lang{
-        display: none;
-    }
-    .account-text{
-        &:hover{
-            .account-details{
-                opacity: 1;
-                visibility: visible;
-            }
-        }
-      }
     .account-btn{
         &:hover{
             i{
@@ -639,9 +623,7 @@ nav{
             color: $main-color;
         }
     }
-    nav .service-order-btn{
-        display: none;
-    }
+ 
     .close-lang-holder{
         display: none;
     }
