--- a/style/sass/components/_mainBanner.scss
+++ b/style/sass/components/_mainBanner.scss
@@ -43,7 +43,7 @@
     position: absolute;
     z-index: 3;
     top: 50%;
-    inset-inline-start: 15%;
+    right: 15%;
    transform: translateY(-50%);
     h1{
         font-size: 60px;
@@ -188,9 +188,9 @@
         display: none;
     }
     .banner-desc{
-       left: 50%;
-       top: 50%;
-       transform: translate(-50% , -50%);
+        width: 100%;
+    //    left: 50%;
+    //    top: 50%;
        inset-inline-start: 0;
        h1{
         font-size: 40px;
