--- a/style/sass/base/_fonts.scss
+++ b/style/sass/base/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Dubai';
-  src: url('../fonts/') format('woff2'),
+  src: url('../fonts/Dubai-Bold.woff2') format('woff2'),
       url('../fonts/Dubai-Bold.woff') format('woff'),
       url('../fonts/Dubai-Bold.ttf') format('truetype');
   font-weight: 700;
