--- a/style/sass/components/_footer.scss
+++ b/style/sass/components/_footer.scss
@@ -378,8 +378,11 @@ img{
 
 
 @include min-768 {
+    .footer-item{
+        margin-top: 38px;
+    }
     .img-item{
-        transform: translateY(-20px);
+        margin-top: 0;
     }
 }
 
