--- a/style/main.css
+++ b/style/main.css
@@ -128,47 +128,47 @@ img {
   background-color: #000;
 }
 
+/*preloader*/
 .preloader {
+  -webkit-pointer-events: none;
   pointer-events: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 .progress {
   position: fixed;
-  z-index: 99999;
+  z-index: 222000;
   top: 0;
   width: 100%;
   height: 5px;
   background-color: #b3b3b3;
+  background-image: linear-gradient(to bottom, #f5f5f5, #f9f9f9);
+  background-repeat: repeat-x;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
   overflow: hidden;
 }
 
 .progress-bar {
-  -webkit-animation: progress 6s ease infinite;
-          animation: progress 6s ease infinite;
+  animation: progress 6s ease infinite;
+  padding: 1px;
   background-color: #000;
-}
-
-@-webkit-keyframes progress {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
+  /* border-radius: 4px 4px 4px 4px; */
 }
 
 @keyframes progress {
   from {
     width: 0;
+    color: rgba(255, 255, 255, 0);
   }
   to {
     width: 100%;
+    color: rgb(255, 255, 255);
   }
 }
+/*preloader*/
 .toTop {
   width: 40px;
   height: 40px;
@@ -213,14 +213,10 @@ img {
   justify-content: center;
   align-items: center;
   background-color: #25d366;
-  -webkit-animation-name: pulse;
-          animation-name: pulse;
-  -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-name: pulse;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  animation-iteration-count: infinite;
   text-decoration: none;
 }
 .fixed-whatsapp:focus {
@@ -229,15 +225,6 @@ img {
 .fixed-whatsapp i {
   font-size: 36px;
   color: #ffffff;
-}
-
-@-webkit-keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 #25d366;
-  }
-  80% {
-    box-shadow: 0 0 0 14px rgba(37, 211, 102, 0);
-  }
 }
 
 @keyframes pulse {
@@ -477,10 +464,6 @@ body {
   transition: all linear 0.3s;
 }
 .search-holder-input input::-moz-placeholder {
-  font-weight: 500;
-  font-size: 16px;
-}
-.search-holder-input input:-ms-input-placeholder {
   font-weight: 500;
   font-size: 16px;
 }
@@ -1505,9 +1488,6 @@ html[dir=ltr] .send i {
   .message input::-moz-placeholder {
     font-size: 13px;
   }
-  .message input:-ms-input-placeholder {
-    font-size: 13px;
-  }
   .message input::placeholder {
     font-size: 13px;
   }
@@ -1835,8 +1815,7 @@ html[dir=ltr] .send i {
   transform: skewX(-25deg);
 }
 .cat-img:hover::before {
-  -webkit-animation: shine 0.75s;
-          animation: shine 0.75s;
+  animation: shine 0.75s;
 }
 .cat-img:hover img {
   filter: grayscale(0);
@@ -1847,12 +1826,6 @@ html[dir=ltr] .send i {
   width: 100%;
   transition: all linear 0.2s;
   filter: grayscale(1);
-}
-
-@-webkit-keyframes shine {
-  100% {
-    left: 125%;
-  }
 }
 
 @keyframes shine {
