--- a/style/sass/components/_category.scss
+++ b/style/sass/components/_category.scss
@@ -101,6 +101,7 @@ section.category:nth-of-type(even) .cat-parent {
       }
       .cat-desc-title{
         font-size: 20px;
+        margin-top: 25px;
       }
       .cat-desc-text{
         font-size: 16px;
