--- a/style/sass/base/_base.scss
+++ b/style/sass/base/_base.scss
@@ -4,23 +4,9 @@ body {
   font-style: normal;
   font-family: 'Dubai' ;
 }
-*{
-  margin: 0 ;
-  padding: 0;
-}
 
 
-html[dir = "rtl"] {
-  body{
-    text-align: right;
-  }
-}
 
-html[dir = "ltr"] {
-  body{
-    text-align: left;
-  }
-}
 .item-parent{
   position: relative;
 }
@@ -93,6 +79,7 @@ img {
   cursor: pointer;
   &:focus{
     text-decoration: none;
+    outline: none;
   }
 }
 
